--- a/gb/1/2/2/n42496.md
+++ b/gb/1/2/2/n42496.md
@@ -8,60 +8,60 @@
 <p>据天极网报道，这个病毒伪装成一个BIND（一个流行的域名服务管理软件）软件的漏洞查找程序，但实际上，该程序可以利用任何一台计算机运行，并向一台服务器上发送大量信息，发起拒绝服务攻击。</p>
 <p>据发布Bugtraq名单的SecurityFocus公司首席技术官透露，这一程序对Network Associates（NAI）公司的域名服务器进行了拒绝服务攻击，鉴于这个原因，它可以被看作是一个特洛伊木马病毒。</p>
 <p>事实上NAI公司的COVERT实验室在该病毒被公布之前就进行过测试，但未能发现其中含有对该公司服务器进行攻击的内容，仍然把它当成一个安全程序。这个程序是否影响到了NAI公司网站运行的速度目前还不清楚，但该网站目前看上去似乎一切正常。</p>
-<hr />
-<p><b><span style="color: red;">相关文章</span></b></p>
+<p><b><span style="color: red">相关文章</span></b></p>
 <ul>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=42427" target="_blank" rel="noopener noreferrer">美国线上网站AOL遭病毒侵袭 用户密码被窃</a> (2/2/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=42357" target="_blank" rel="noopener noreferrer">电脑病毒侵袭美国线上公司</a> (2/2/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=39040" target="_blank" rel="noopener noreferrer">计算机黑客──21世纪主要犯罪形态</a> (1/24/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=38965" target="_blank" rel="noopener noreferrer">电脑病毒“美丽杀手”新年又来袭 </a> (1/24/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35677" target="_blank" rel="noopener noreferrer">新年期间电脑病毒正在对你狞笑</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35457" target="_blank" rel="noopener noreferrer">日本电脑感染毒连续3月创记录</a> (1/16/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35234" target="_blank" rel="noopener noreferrer">日本电脑犯罪一年内增长了三倍</a> (1/16/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=29511" target="_blank" rel="noopener noreferrer">千年虫侵袭美7-Eleven　</a> (1/3/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=29090" target="_blank" rel="noopener noreferrer">小心! “新年快乐”电脑病毒由美袭港</a> (1/2/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=28571" target="_blank" rel="noopener noreferrer">电脑病毒警告：“新年快乐”很危险！</a> (1/1/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=27013" target="_blank" rel="noopener noreferrer">新型电脑病毒“白雪公主”来了 </a> (12/26/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=26422" target="_blank" rel="noopener noreferrer">警惕“圣诞节病毒”</a> (12/23/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=26140" target="_blank" rel="noopener noreferrer">为镇压法轮功 中共向全球发送电脑病毒</a> (12/22/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=25654" target="_blank" rel="noopener noreferrer">注意，大批病毒等着对你说“圣诞快乐”！ </a> (12/20/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=22356" target="_blank" rel="noopener noreferrer">香港警告“Creative”电脑病毒将肆虐</a> (12/6/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=21899" target="_blank" rel="noopener noreferrer">防不胜防 警惕比电脑病毒更危险的新电脑虫！</a> (12/4/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=21452" target="_blank" rel="noopener noreferrer">网友小心！新种病毒“爱之声”现身</a> (12/1/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=9787" target="_blank" rel="noopener noreferrer">14日开始在中国扩散的电脑病毒来自西班牙</a> (11/16/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=9485" target="_blank" rel="noopener noreferrer">新电脑病毒入侵中国大陆引起恐慌 上海作家忙扫毒</a> (11/14/2000)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=7045" target="_blank" rel="noopener noreferrer">★★★网友注意：卡通人物电脑病毒到处害人</a> (10</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42427" target="_blank" rel="noopener noreferrer nofollow">美国线上网站AOL遭病毒侵袭 用户密码被窃</a> (2/2/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42357" target="_blank" rel="noopener noreferrer nofollow">电脑病毒侵袭美国线上公司</a> (2/2/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39040" target="_blank" rel="noopener noreferrer nofollow">计算机黑客──21世纪主要犯罪形态</a> (1/24/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38965" target="_blank" rel="noopener noreferrer nofollow">电脑病毒“美丽杀手”新年又来袭 </a> (1/24/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35677" target="_blank" rel="noopener noreferrer nofollow">新年期间电脑病毒正在对你狞笑</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35457" target="_blank" rel="noopener noreferrer nofollow">日本电脑感染毒连续3月创记录</a> (1/16/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35234" target="_blank" rel="noopener noreferrer nofollow">日本电脑犯罪一年内增长了三倍</a> (1/16/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29511" target="_blank" rel="noopener noreferrer nofollow">千年虫侵袭美7-Eleven　</a> (1/3/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29090" target="_blank" rel="noopener noreferrer nofollow">小心! “新年快乐”电脑病毒由美袭港</a> (1/2/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28571" target="_blank" rel="noopener noreferrer nofollow">电脑病毒警告：“新年快乐”很危险！</a> (1/1/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=27013" target="_blank" rel="noopener noreferrer nofollow">新型电脑病毒“白雪公主”来了 </a> (12/26/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=26422" target="_blank" rel="noopener noreferrer nofollow">警惕“圣诞节病毒”</a> (12/23/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=26140" target="_blank" rel="noopener noreferrer nofollow">为镇压法轮功 中共向全球发送电脑病毒</a> (12/22/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=25654" target="_blank" rel="noopener noreferrer nofollow">注意，大批病毒等着对你说“圣诞快乐”！ </a> (12/20/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=22356" target="_blank" rel="noopener noreferrer nofollow">香港警告“Creative”电脑病毒将肆虐</a> (12/6/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=21899" target="_blank" rel="noopener noreferrer nofollow">防不胜防 警惕比电脑病毒更危险的新电脑虫！</a> (12/4/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=21452" target="_blank" rel="noopener noreferrer nofollow">网友小心！新种病毒“爱之声”现身</a> (12/1/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=9787" target="_blank" rel="noopener noreferrer nofollow">14日开始在中国扩散的电脑病毒来自西班牙</a> (11/16/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=9485" target="_blank" rel="noopener noreferrer nofollow">新电脑病毒入侵中国大陆引起恐慌 上海作家忙扫毒</a> (11/14/2000)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=7045" target="_blank" rel="noopener noreferrer nofollow">★★★网友注意：卡通人物电脑病毒到处害人</a> (10</li>
 </ul>
-<p>/29/2000)</p>
-<p>&nbsp;</p>
+<p>
+/29/2000)</p>
+<p>?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/1/n28571.md#1">电脑病毒警告：“新年快乐”很危险！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/2/n29090.md#1">小心! “新年快乐”电脑病毒由美袭港</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/3/n29511.md#1">千年虫侵袭美7-Eleven　</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/16/n35234.md#1">日本电脑犯罪一年内增长了三倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/8/n14502333.md#1">宰相肚里能撑船——北宋贤相王旦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543415.md#1">【军事情报局】中国人不想打台湾 却信战争难免</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543570.md#1">【直播】美众议院就“大而美法案”投票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543497.md#1">【直播】布鲁斯主持国务院简报会（7/2）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542581.md#1">母熊背两只幼熊游泳渡过水库 目击者称奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542388.md#1">台气象专家：本周可能有两个台风生成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542457.md#1">习亲信马兴瑞卸任新疆书记 王岐山笔杆子接任</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542229.md#1">胡一天靠直播还房贷 “673天没进组”登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542957.md#1">末日预言疯传 唐绮阳坦言已录好影片交代一事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542143.md#1">饰习仲勋夺白玉兰视帝 靳东惹网友不满和吐槽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542863.md#1">鹿晗暴瘦被疑深陷情伤 陈赫帮好友回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542189.md#1">蔡澜膝下无子 遗产分配引关注 助理四字回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541558.md#1">南海海槽强震倒数中？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542520.md#1">研究：这样喝咖啡可以让你活久一点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541784.md#1">在地毯上喷洒这一物 可以防止灰尘黏住</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542717.md#1">赴中国移植器官 他夜夜恶梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539355.md#1">新研究：每天跳跃几分钟可增强骨骼防骨折</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/2/n42496.htm">特洛伊木马病毒被安全专家四处散播</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/2/n42496.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
